WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/Institutional_Mandate__c.object-meta.xml
<CustomObject>
    <description
  >Investment mandate / IPS constraint tracked for an institutional (B2B) or partner program (B2B2C) account. Part of Salesforce Wealth AI Studio.</description>
    <label>Institutional Mandate</label>
    <nameField>
        <displayFormat>IM-{00000}</displayFormat>
        <label>Institutional Mandate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Institutional Mandates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>