WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Institutional Mandates</relationshipLabel>
    <relationshipName>Institutional_Mandates</relationshipName>
    <type>Lookup</type>
</CustomField>