WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/fields/AI_Agent_Run__c.field-meta.xml
<CustomField>
    <fullName>AI_Agent_Run__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AI Agent Run</label>
    <referenceTo>AI_Agent_Run__c</referenceTo>
    <relationshipLabel>Institutional Mandates</relationshipLabel>
    <relationshipName>Institutional_Mandates</relationshipName>
    <type>Lookup</type>
</CustomField>