WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/fields/Allocation_Constraint__c.field-meta.xml
<CustomField>
    <fullName>Allocation_Constraint__c</fullName>
    <label>Allocation Constraint</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>