WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/fields/Breach_Detail__c.field-meta.xml
<CustomField>
    <fullName>Breach_Detail__c</fullName>
    <label>Breach Detail</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>