WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/fields/Compliance_Status__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Status__c</fullName>
    <label>Compliance Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Compliant</fullName><default>true</default><label
        >Compliant</label></value>
            <value><fullName>Under Review</fullName><default
        >false</default><label>Under Review</label></value>
            <value><fullName>Breach</fullName><default>false</default><label
        >Breach</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>