WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/fields/Last_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed__c</fullName>
    <label>Last Reviewed</label>
    <type>DateTime</type>
</CustomField>