WAM-Studio-SF-Build/force-app/main/default/objects/Institutional_Mandate__c/fields/Mandate_Type__c.field-meta.xml
<CustomField>
    <fullName>Mandate_Type__c</fullName>
    <label>Mandate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Asset Allocation</fullName><default
        >true</default><label>Asset Allocation</label></value>
            <value><fullName>Concentration Limit</fullName><default
        >false</default><label>Concentration Limit</label></value>
            <value><fullName>ESG Restriction</fullName><default
        >false</default><label>ESG Restriction</label></value>
            <value><fullName>Liquidity Requirement</fullName><default
        >false</default><label>Liquidity Requirement</label></value>
            <value><fullName>Investment Policy Statement</fullName><default
        >false</default><label>Investment Policy Statement</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>